2010-02-13  Pawel Salek

	* configure.in, NEWS: release 2.4.7

2010-02-12  Albrecht Dreß

	* src/balsa-message.c (bm_previous_part_info): do not return
	uninitialized BalsaPartInfo.

2010-02-09  Albrecht Dreß

	* configure.in: more understandable output from html-widget
	configuration.

2010-02-05  Peter Bloomfield

	* configure.in: use a case statement to configure html-widget.
	* libbalsa/html.c: test for HAVE_HTML_WIDGET.
	* libbalsa/html.h: ditto.
	* libbalsa/mime.c (process_mime_part): ditto.
	* src/balsa-message.c (bm_find_entry_changed_cb), (bm_find_again),
	(preferred_part), (balsa_message_can_select),
	(balsa_message_find_in_message): ditto.
	* src/balsa-message.h: ditto.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text):
	ditto.
	* src/main-window.c: ditto.
	* src/message-window.c (mw_select_part_cb): ditto.

2010-02-05  Peter Bloomfield

	* src/balsa-app.h: new boolean mark_quoted.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text):
	respect it.
	* src/pref-manager.c (open_preferences_manager), (apply_prefs),
	(set_prefs), (quoted_group), (mark_quoted_modified_cb): manage
	it.
	* src/save-restore.c (config_global_load), (config_save): save
	and restore it.

2010-02-05  Peter Bloomfield

	* libbalsa/mime.c (libbalsa_match_regex): do not loop
	indefinitely when regex matches zero characters.

2010-02-05  Pawel Salek

	* libbalsa/imap/imap_compress.c: reduce the compressed stream
	flushing frequency.
	* libbalsa/imap/siobuf.c: matching change on the buffering side.

2010-01-27  Pawel Salek

	* configure.in, NEWS: release 2.4.6.

2010-01-25  Pawel Salek

	* libbalsa/imap/siobuf.c: fix occassional sio_ungetc() failures
	for a compressed connection.

2010-01-25  Peter Bloomfield

	* libbalsa/filter-funcs.c (lbcond_compare_string_conditions),
	(libbalsa_condition_compare): compare string conditions
	correctly.
	* libbalsa/mailbox_local.c (message_match_real): do not pass
	NULL list to internet_address_list_to_string().
